--- a/html/index.html
+++ b/html/index.html
@@ -17,11 +17,13 @@
       <h1 id="title">File Reader</h1>
     </div>
     <div id="aboutDiv">
-        <h2 id="about">About</h2>
+      <h2 id="about">About</h2>
       <p>
         This website is an open source project that is used for<br />
         compiling mapl to python code. Mapl is a language<br />
-        made in C by github user 'bogfrog7'. Python on the<br> other hand is a interpreted programming language <br> made by Guido van Rossum.
+        made in C by github user 'bogfrog7'. Python on the<br />
+        other hand is a interpreted programming language <br />
+        made by Guido van Rossum.
       </p>
     </div>
     <script src="../scripts/index.js"></script>
