added source files

--- a/html/index.html
+++ b/html/index.html
@@ -15,10 +15,17 @@
         id="githubButton"
       />
     </div>
+    <h1 id="title">Gif Manipulator</h1>
     <div>
-      <input type="file" id="fileInput">
+      <input type="file" id="fileInput" />
     </div>
-    <div id="imageBox">
+    <div id="imageBox"></div>
+    <div id="editBox">
+      <button id="resize_button">resize</button>
+      <input type="text" id="height_input">
+      <h5 id="imageBoxHeight">height</h5>
+      <h5 id="imageBoxWidth">width</h5>
+      <input type="text", id="width_input">
     </div>
     <script src="../scripts/index.js"></script>
   </body>
